--- a/Z I101/I-101Website.css
+++ b/Z I101/I-101Website.css
@@ -29,7 +29,7 @@
   list-style-type: none;
 }
 .bgBlue {
-  background-color: lightcoral;
+  background-color: lightblue;
 }
 .bgWhite {
   background-color: white;
@@ -104,4 +104,9 @@
 a {
   text-decoration: none;
   color: black;
+}
+
+.selecto:hover {
+  background-color: lightslategray;
+  color: aliceblue;
 }
