--- a/Z I101/Website/I-101Website.css
+++ b/Z I101/Website/I-101Website.css
@@ -101,3 +101,12 @@
   min-height: 350px;
   min-width: 100%;
 }
+a {
+  text-decoration: none;
+  color: black;
+}
+
+.selecto:hover {
+  background-color: lightslategray;
+  color: aliceblue;
+}
